[gd_scene load_steps=2 format=3 uid="uid://cy7giv5h3hnk8"]

[ext_resource type="Script" path="res://Scripts/MainCamera.gd" id="1_pjhqa"]

[node name="MainCamera" type="Camera2D"]
position = Vector2(250, 250)
script = ExtResource("1_pjhqa")

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="ShakeTimer" to="." method="_on_shake_timer_timeout"]
